--- a/notebooks/1_primera_aproximacion.ipynb
+++ b/notebooks/1_primera_aproximacion.ipynb
@@ -15,18 +15,6 @@
    "source": [
     "# Sobre el conjunto de datos\n",
     "\n",
-    "Usabilidad de la base de datos: 7.06\n",
-    "\n",
-    "Tamaño base de datos: 4.19 MB\n",
-    "\n",
-    "### **Contexto**\n",
-    "\n",
-    "En un mundo donde las decisiones financieras personales impactan directamente en la estabilidad económica de los hogares, comprender los patrones de comportamiento financiero es fundamental. Sin embargo, los datos reales sobre finanzas personales suelen ser sensibles y difíciles de obtener debido a su naturaleza privada.\n",
-    "\n",
-    "El Personal Finance ML Dataset ha sido creado para simular de forma sintética (2020 - 2024), pero realista, el comportamiento financiero de personas de diferentes regiones, niveles de ingreso y situaciones crediticias. Este conjunto de datos reproduce de manera real las dinámicas del mundo real, permitiendo analizar hábitos financieros y estudiar la relación entre ingresos, gastos y deudas.\n",
-    "\n",
-    "### **Descripción de los datos**\n",
-    "\n",
     "El dataset contiene 32.424 registros individuales (filas), donde cada fila representa el perfil financiero de una persona. Los datos incluyen información demográfica, económica, crediticia y temporal, con el objetivo de reflejar la diversidad de comportamientos financieros a nivel global.\n",
     "\n",
     "* **user_id**: Identificador único que representa a cada individuo.\n",
@@ -48,18 +36,7 @@
     "* **credit_score**: Puntuación crediticia sintética en una escala de 300 a 850.\n",
     "* **savings_to_income_ratio**: Relación entre los ahorros y los ingresos anuales del individuo.\n",
     "* **region**: Región geográfica en la que reside el individuo.\n",
-    "* **record_date**: Fecha de registro de la información financiera.\n",
-    "### **Objetivo del Proyecto**\n",
-    "\n",
-    "El objetivo de este proyecto es realizar un proceso completo de limpieza y análisis exploratorio (EDA) sobre el conjunto de datos del Personal Finance ML Dataset, con el fin de comprender las características principales de la población representada y extraer patrones significativos sobre el comportamiento financiero individual.\n",
-    "\n",
-    "De manera provisional, el análisis podría orientarse hacia alguno de los siguientes enfoques:\n",
-    "\t•\tEvaluar la salud financiera de los individuos según sus ingresos, gastos y nivel de ahorro.\n",
-    "\t•\tIdentificar patrones de riesgo crediticio mediante el estudio del credit_score, debt_to_income_ratio y loan_status.\n",
-    "\t•\tSegregar perfiles financieros en función de la región, nivel educativo o tipo de préstamo.\n",
-    "\t•\tExplorar relaciones entre ingresos, ahorros y endeudamiento, generando visualizaciones que faciliten la interpretación.\n",
-    "\n",
-    "En una segunda etapa, los resultados del EDA podrán servir como base para desarrollar un modelo de predicción o segmentación, dependiendo del enfoque que finalmente se elija."
+    "* **record_date**: Fecha de registro de la información financiera."
    ]
   },
   {
