empezar data_clean

--- a/notebooks/1_primera_aproximacion.ipynb
+++ b/notebooks/1_primera_aproximacion.ipynb
@@ -1281,6 +1281,7 @@
    "metadata": {},
    "source": [
     "## Next Steps\n",
+    "- Normalización ligera de strings (espacios, may/min) en categóricas.\n",
     "- Eliminar columnas redundantes, si las hay.\n",
     "- Ajustar los tipos de datos (Dtypes)\n",
     "- Tratar los valores nulos."
