--- a/notebooks/2_data_clean.ipynb
+++ b/notebooks/2_data_clean.ipynb
@@ -663,7 +663,7 @@
    "id": "bbfed06f",
    "metadata": {},
    "source": [
-    "## 3.1.- Formateo de nombres de columnas\n",
+    "## 3.2.- Formateo de nombres de columnas\n",
     "\n",
     "Antes de cambiar el tipo de datos vamos a formatear el nombre de las columnas por si hubiesen espacios o caracteres especiales."
    ]
@@ -741,7 +741,7 @@
    "id": "15f8f1de",
    "metadata": {},
    "source": [
-    "Cambiamos el tipo de dato de las columnas `Count` , `Tenure Months` `Churn Value`, ` monthly_charges`y `Churn Score` a `int64` y `Zip Code` a `str`."
+    "Cambiamos Dtype de la columna \"has_loan\" a Boleando y la columna \"record_date\" a datetime. El resto de columnas categóricas tienen más de 2 categorías y auqnue se puede hacer un Encoding, esto solo es últil por si más adelante se quiere hacer un modelo o segmentación pero es mejor dejarlo así para el futuro EDA."
    ]
   },
   {
@@ -769,19 +769,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "20bda9b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean[\"has_loan\"].unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b23b621",
+   "execution_count": 26,
+   "id": "17fb970b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32424 entries, 0 to 32423\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                   Non-Null Count  Dtype         \n",
+      "---  ------                   --------------  -----         \n",
+      " 0   user_id                  32424 non-null  object        \n",
+      " 1   age                      32424 non-null  int64         \n",
+      " 2   gender                   32424 non-null  object        \n",
+      " 3   education_level          32424 non-null  object        \n",
+      " 4   employment_status        32424 non-null  object        \n",
+      " 5   job_title                32424 non-null  object        \n",
+      " 6   monthly_income_usd       32424 non-null  float64       \n",
+      " 7   monthly_expenses_usd     32424 non-null  float64       \n",
+      " 8   savings_usd              32424 non-null  float64       \n",
+      " 9   has_loan                 32424 non-null  bool          \n",
+      " 10  loan_type                32424 non-null  object        \n",
+      " 11  loan_amount_usd          32424 non-null  float64       \n",
+      " 12  loan_term_months         32424 non-null  int64         \n",
+      " 13  monthly_emi_usd          32424 non-null  float64       \n",
+      " 14  loan_interest_rate_pct   32424 non-null  float64       \n",
+      " 15  debt_to_income_ratio     32424 non-null  float64       \n",
+      " 16  credit_score             32424 non-null  int64         \n",
+      " 17  savings_to_income_ratio  32424 non-null  float64       \n",
+      " 18  region                   32424 non-null  object        \n",
+      " 19  record_date              32424 non-null  datetime64[ns]\n",
+      "dtypes: bool(1), datetime64[ns](1), float64(8), int64(3), object(7)\n",
+      "memory usage: 4.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cambiar columna \"has_loan\" a boleano\n",
+    "df_clean[\"has_loan\"] = df_clean[\"has_loan\"].replace({'Yes': True, 'No': False}).astype(bool)\n",
+    "\n",
+    "# Cambiar columna \"record_date\" a datetime\n",
+    "df_clean['record_date'] = pd.to_datetime(df_clean['record_date'])\n",
+    "\n",
+    "df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a54df2b",
+   "metadata": {},
+   "source": [
+    "Vemos que los cambios se han hecho correctamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d590a00",
+   "metadata": {},
+   "source": [
+    "## 3.4.- Crear nuevo csv limpio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "700c8c3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# guardamos el archivo en formato pkl\n",
+    "df_clean.to_pickle(\"../data/processed/Personal_Finance_ML_Dataset_limpio.pkl\", protocol=4) # protocol 4 sirve para mantener la consistencia de los datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6fcacf",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
