Actualizacion Next Steps

--- a/notebooks/2_data_clean.ipynb
+++ b/notebooks/2_data_clean.ipynb
@@ -872,7 +872,10 @@
    "source": [
     "# Next Steps\n",
     "\n",
-    "- "
+    "- Analizar la relación entre variables financieras clave.\n",
+    "- Comparar los indicadores financieros.\n",
+    "- Identificar posibles patrones o desigualdades financieras.\n",
+    "- Detectar relaciones de interés."
    ]
   }
  ],
