--- a/notebooks/3_eda.ipynb
+++ b/notebooks/3_eda.ipynb
@@ -51,26 +51,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecfa5f40",
+   "metadata": {},
+   "source": [
+    "# 1.- Librerías"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5ae77af",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tratamiento de datos\n",
+    "# -----------------------------------------------------------------------\n",
+    "import pandas as pd #manejo de estructura de datos tabulares\n",
+    "import numpy as np # manejo de arrays y operaciones matemáticas\n",
+    "\n",
+    "# libreria para crear mapas interactivos\n",
+    "# -----------------------------------------------------------------------\n",
+    "import folium\n",
+    "from folium.plugins import HeatMap, MarkerCluster\n",
+    "\n",
+    "\n",
+    "# librerias para visualizar datos\n",
+    "# -----------------------------------------------------------------------\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from wordcloud import WordCloud\n",
+    "\n",
+    "\n",
+    "# Libreria para acceder a funciones del sistema \n",
+    "# -----------------------------------------------------------------------\n",
+    "import sys \n",
+    "sys.path.append(\"../\")\n",
+    "import src.suport as sp\n",
+    "\n",
+    "\n",
+    "# Warnings\n",
+    "# -----------------------------------------------------------------------\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Configuracion de pandas\n",
+    "# -----------------------------------------------------------------------\n",
+    "pd.options.display.max_columns = None"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1c250188",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -78,11 +113,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "243beb2f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -107,8 +138,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
