--- a/notebooks/3_eda.ipynb
+++ b/notebooks/3_eda.ipynb
@@ -18,10 +18,12 @@
     "\t* debt_to_income_ratio: proporción entre deuda e ingresos.\n",
     "\t* credit_score: puntuación crediticia (300–850).\n",
     "\t* savings_to_income_ratio: proporción entre ahorro e ingresos.\n",
-    "\t* region: zona geográfica de residencia.\n",
+    "\t* savings_usd: total ahorros acumulado por individuo.\n",
+    "\t\n",
     "2.\tComparar los indicadores financieros según variables demográficas y laborales:\n",
     "\t* Edad (age).\n",
     "\t* Género (gender).\n",
+    "\t* region: zona geográfica de residencia.\n",
     "\t* Nivel educativo (education_level).\n",
     "\t* Situación laboral (employment_status).\n",
     "\t* Puesto de trabajo (job_title).\n",
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b5ae77af",
    "metadata": {},
    "outputs": [],
@@ -88,8 +90,6 @@
     "# -----------------------------------------------------------------------\n",
     "import sys \n",
     "sys.path.append(\"../\")\n",
-    "import src.suport as sp\n",
-    "\n",
     "\n",
     "# Warnings\n",
     "# -----------------------------------------------------------------------\n",
@@ -102,12 +102,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7253227",
+   "metadata": {},
+   "source": [
+    "# 2.-Cargar datos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1c250188",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>education_level</th>\n",
+       "      <th>employment_status</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>monthly_income_usd</th>\n",
+       "      <th>monthly_expenses_usd</th>\n",
+       "      <th>savings_usd</th>\n",
+       "      <th>has_loan</th>\n",
+       "      <th>loan_type</th>\n",
+       "      <th>loan_amount_usd</th>\n",
+       "      <th>loan_term_months</th>\n",
+       "      <th>monthly_emi_usd</th>\n",
+       "      <th>loan_interest_rate_pct</th>\n",
+       "      <th>debt_to_income_ratio</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>savings_to_income_ratio</th>\n",
+       "      <th>region</th>\n",
+       "      <th>record_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>U00001</td>\n",
+       "      <td>56</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Salesperson</td>\n",
+       "      <td>3531.69</td>\n",
+       "      <td>1182.59</td>\n",
+       "      <td>367655.03</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No_loan</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>430</td>\n",
+       "      <td>8.68</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2024-01-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>U00002</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Salesperson</td>\n",
+       "      <td>3531.73</td>\n",
+       "      <td>2367.99</td>\n",
+       "      <td>260869.10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>146323.34</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4953.50</td>\n",
+       "      <td>13.33</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>543</td>\n",
+       "      <td>6.16</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>2022-02-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>U00003</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>2799.49</td>\n",
+       "      <td>1003.91</td>\n",
+       "      <td>230921.21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No_loan</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>754</td>\n",
+       "      <td>6.87</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2022-05-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>U00004</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>5894.88</td>\n",
+       "      <td>4440.12</td>\n",
+       "      <td>304815.51</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>93242.37</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4926.57</td>\n",
+       "      <td>23.93</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>461</td>\n",
+       "      <td>4.31</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2023-10-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>U00005</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>5128.93</td>\n",
+       "      <td>4137.61</td>\n",
+       "      <td>461509.48</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No_loan</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>516</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2021-08-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index user_id  age  gender education_level employment_status    job_title  \\\n",
+       "0      0  U00001   56  Female     High School     Self-employed  Salesperson   \n",
+       "1      1  U00002   19  Female             PhD          Employed  Salesperson   \n",
+       "2      2  U00003   20  Female          Master          Employed      Teacher   \n",
+       "3      3  U00004   25    Male             PhD          Employed      Manager   \n",
+       "4      4  U00005   53  Female             PhD          Employed      Student   \n",
+       "\n",
+       "   monthly_income_usd  monthly_expenses_usd  savings_usd  has_loan  loan_type  \\\n",
+       "0             3531.69               1182.59    367655.03     False    No_loan   \n",
+       "1             3531.73               2367.99    260869.10      True  Education   \n",
+       "2             2799.49               1003.91    230921.21     False    No_loan   \n",
+       "3             5894.88               4440.12    304815.51      True   Business   \n",
+       "4             5128.93               4137.61    461509.48     False    No_loan   \n",
+       "\n",
+       "   loan_amount_usd  loan_term_months  monthly_emi_usd  loan_interest_rate_pct  \\\n",
+       "0             0.00                 0             0.00                    0.00   \n",
+       "1        146323.34                36          4953.50                   13.33   \n",
+       "2             0.00                 0             0.00                    0.00   \n",
+       "3         93242.37                24          4926.57                   23.93   \n",
+       "4             0.00                 0             0.00                    0.00   \n",
+       "\n",
+       "   debt_to_income_ratio  credit_score  savings_to_income_ratio         region  \\\n",
+       "0                  0.00           430                     8.68          Other   \n",
+       "1                  1.40           543                     6.16  North America   \n",
+       "2                  0.00           754                     6.87         Africa   \n",
+       "3                  0.84           461                     4.31         Europe   \n",
+       "4                  0.00           516                     7.50         Africa   \n",
+       "\n",
+       "  record_date  \n",
+       "0  2024-01-09  \n",
+       "1  2022-02-13  \n",
+       "2  2022-05-12  \n",
+       "3  2023-10-02  \n",
+       "4  2021-08-07  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cargamos los datos limpios\n",
+    "df = pd.read_pickle(\"../data/processed/Personal_Finance_ML_Dataset_limpio.pkl\")\n",
+    "df.reset_index(inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0258724",
+   "metadata": {},
+   "source": [
+    "# 3.- Análisis General"
+   ]
   },
   {
    "cell_type": "code",
@@ -116,6 +348,518 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308879c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ccd71c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2a5f237",
+   "metadata": {},
+   "source": [
+    "# 4.- Análisis estructurado "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd792a9",
+   "metadata": {},
+   "source": [
+    "## 4.1.- Análisis Demográfico y Geográfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be176593",
+   "metadata": {},
+   "source": [
+    "#### 1.- age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e8e5e79",
+   "metadata": {},
+   "source": [
+    "- age vs debt_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cf13cf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2b160622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c65250fa",
+   "metadata": {},
+   "source": [
+    "- age vs credit_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e5ed88e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d76c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e74c42",
+   "metadata": {},
+   "source": [
+    "- age vs savings_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1238eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "048ecd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b43333c8",
+   "metadata": {},
+   "source": [
+    "- age vs savings_usd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbea8934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0d61a0b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c86d3b7",
+   "metadata": {},
+   "source": [
+    "#### 2.- gender"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4233f3b",
+   "metadata": {},
+   "source": [
+    "- gender vs debt_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccb720f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6eff2ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb1074c",
+   "metadata": {},
+   "source": [
+    "- gender vs savings_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d00be1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a603ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a38a29",
+   "metadata": {},
+   "source": [
+    "- gender vs credit_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b63eadb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "024a63a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f8ec586",
+   "metadata": {},
+   "source": [
+    "- gender vs savings_usd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc1a12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d63abd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a06f19",
+   "metadata": {},
+   "source": [
+    "#### 3.- education_level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51ae6080",
+   "metadata": {},
+   "source": [
+    "- education_level vs debt_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1decc0d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b7e9d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26575966",
+   "metadata": {},
+   "source": [
+    "- education_level vs savings_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a13fe6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3203af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6215d750",
+   "metadata": {},
+   "source": [
+    "- education_level vs credit_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "125c538b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "514b0d40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2af3236",
+   "metadata": {},
+   "source": [
+    "- education_level vs savings_usd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd60492f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be70f3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de5c0a0b",
+   "metadata": {},
+   "source": [
+    "#### 4.- region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "842fbb77",
+   "metadata": {},
+   "source": [
+    "- regio vs debt_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f83757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f6b3350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d524b4f",
+   "metadata": {},
+   "source": [
+    "- region vs savings_to_income_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f1e3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d227c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "958ea5bb",
+   "metadata": {},
+   "source": [
+    "- region vs credit_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a90cd458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db47990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c0ca49",
+   "metadata": {},
+   "source": [
+    "- region vs savings_usd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aad14f11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ce13b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gráfico"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +888,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.0"
   }
  },
