Análisis general terminado

--- a/notebooks/3_eda.ipynb
+++ b/notebooks/3_eda.ipynb
@@ -413,6 +413,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b49482dc",
+   "metadata": {},
+   "source": [
+    "El dataset contiene 32.424 registros y 21 columnas (está contando el index), con fechas que abarcan desde julio de 2021 hasta julio de 2025."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8381916d",
    "metadata": {},
    "source": [
@@ -522,6 +530,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a955abb5",
+   "metadata": {},
+   "source": [
+    "* La media del **Debt-to-Income Ratio (DTI)** es 1.19, pero la mediana es 0, lo que significa que la mayoría de personas no tienen deuda activa.\n",
+    "* El **Credit Score** promedio es 575, está dentro de una zona media-baja de solvencia.\n",
+    "* El **Savings-to-Income Ratio** tiene una media cercana a 5, lo que sugiere un nivel de ahorro moderado en relación con los ingresos.\n",
+    "* El valor medio de **savings_usd** (243.752 USD) muestra la presencia de algunos ahorros muy altos que elevan la media, mientras que la mediana (201.700 USD) refleja una distribución más realista para la mayoría."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "51ccd71c",
@@ -618,10 +637,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fd836dd",
+   "metadata": {},
+   "source": [
+    "* **DTI**: distribución muy sesgada a 0 con cola larga; confirma mucha gente sin deuda y algunos valores extremos.\n",
+    "* **Savings/Income**: distribución casi uniforme entre 0 y 10; parece un ratio sintético capado en 10.\n",
+    "* **Savings USD**: sesgo positivo fuerte; la mayoría tiene ahorros bajos/medios y pocos casos muy altos.\n",
+    "* **Credit score**: cobertura amplia 300–850 con reparto bastante plano; sin picos claros en la distribución bruta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "653b4e45",
    "metadata": {},
    "source": [
-    "#### 2.-\tBoxplots de las mismas variables.\n",
+    "#### 2.- Boxplots de las mismas variables.\n",
     "Con esto se pretende hacerlo mismo que antes pero para detectar outliers de un vistazo."
    ]
   },
@@ -682,10 +712,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ff7b416",
+   "metadata": {},
+   "source": [
+    "* **DTI**: mediana en 0 y muchísimos outliers altos; conviene tratar escala/extremos en comparativas.\n",
+    "* **Savings/Income**: IQR aprox. 3–7 con pocos outliers; ratio estable para la mayoría.\n",
+    "* **Savings USD**: mediana 0.2–0.3M y cola de outliers hacia >0.8M; fuerte asimetría.\n",
+    "* **Credit score**: mediana 575 y rango intercuartílico aprox. 450–700; variabilidad moderada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56584787",
    "metadata": {},
    "source": [
-    "#### 3.-\tCrédit Score por bandas (Poor/Fair/Good/Very Good/Excellent).\n",
+    "#### 3.- Crédit Score por bandas (Poor/Fair/Good/Very Good/Excellent).\n",
     "Esto clasifica la población por calidad crediticia."
    ]
   },
@@ -712,6 +753,15 @@
     "score_band = pd.cut(df[\"credit_score\"], bins=bins, labels=labels, include_lowest=True)\n",
     "score_band.value_counts().reindex(labels).plot(kind=\"bar\", color=color_total, figsize=(7,4))\n",
     "plt.title(\"Distribución por banda de Credit Score\"); plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "003b5816",
+   "metadata": {},
+   "source": [
+    "* Predomina la banda Poor, seguida de Fair, y luego Good/Very Good/Excellent decrecientes.\n",
+    "* En general, el perfil crediticio está sesgado hacia calidades bajas/medias, no hacia “excellent”."
    ]
   },
   {
@@ -759,6 +809,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e960d78",
+   "metadata": {},
+   "source": [
+    "La mayoría de los puntos se sitúan por debajo de la línea 45°, lo que indica que la mayoría de las personas gastan menos de lo que ingresan. Solo unos pocos casos se acercan o superan la línea, mostrando posibles situaciones de gasto elevado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4e0ba7c",
    "metadata": {},
    "source": [
@@ -789,6 +847,14 @@
     "            scatter_kws=dict(s=10, alpha=.3, color=color_total),\n",
     "            line_kws=dict(color=color_activos))\n",
     "plt.title(\"Relación DTI vs Credit Score\"); plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e35899af",
+   "metadata": {},
+   "source": [
+    "No se observa una relación clara entre DTI y el puntaje crediticio; los valores están muy concentrados cerca de DTI = 0, lo que confirma que la mayoría no tiene deudas activas. El score se mantiene estable independientemente del nivel de deuda."
    ]
   },
   {
@@ -827,10 +893,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1225e7f",
+   "metadata": {},
+   "source": [
+    "La relación entre ahorro e ingresos y el puntaje crediticio es prácticamente nula; las puntuaciones se distribuyen de forma uniforme a lo largo de todo el rango de ahorro. No se aprecia una tendencia directa entre mayor ahorro y mejor score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "12382750",
    "metadata": {},
    "source": [
-    "## 3.4.- Correlaciones rápidas)"
+    "## 3.4.- Correlaciones rápidas"
    ]
   },
   {
@@ -866,6 +940,18 @@
     "plt.figure(figsize=(7,5))\n",
     "sns.heatmap(corr, annot=True, fmt=\".2f\", cmap=\"Blues\")\n",
     "plt.title(\"Matriz de correlación (variables clave)\"); plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b024d99",
+   "metadata": {},
+   "source": [
+    "Se observa una fuerte correlación positiva entre savings_to_income_ratio y savings_usd (0.72), lo que confirma que ambas miden el nivel de ahorro.\n",
+    "\n",
+    "Los ingresos (monthly_income_usd) se relacionan de forma moderada con los ahorros (0.60) y los gastos (0.83), mostrando coherencia entre las variables financieras.\n",
+    "\n",
+    "En cambio, el credit_score y el debt_to_income_ratio no presentan correlaciones significativas con el resto de variables, lo que sugiere que podrían depender de otros factores no reflejados directamente en el dataset."
    ]
   },
   {
@@ -943,6 +1029,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c97b61b",
+   "metadata": {},
+   "source": [
+    "* La columna region está muy equilibrada entre continentes.\n",
+    "* En education_level, el nivel Bachelor es el más común, seguido de Master y High School.\n",
+    "* En employment_status, la mayoría está empleada, con menor presencia de autónomos, desempleados y estudiantes.\n",
+    "* En job_title, las profesiones más frecuentes son Driver, Teacher y Manager, aunque la distribución entre los 10 primeros puestos es bastante homogénea."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4ab17a7",
    "metadata": {},
    "source": [
@@ -977,12 +1074,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ecfebb",
+   "cell_type": "markdown",
+   "id": "674f9297",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "El reparto regional está muy equilibrado entre North America, Asia y Europe, cada una con alrededor del 33% del total."
+   ]
   },
   {
    "cell_type": "markdown",
