next steps después del EDA

--- a/notebooks/3_eda.ipynb
+++ b/notebooks/3_eda.ipynb
@@ -5142,10 +5142,11 @@
    "source": [
     "# Next Steps\n",
     "\n",
-    "- Profundizar en el análisis correlacional entre ratios financieros.\n",
-    "- Explorar la distribución del score crediticio por región y situación laboral.\n",
-    "- Analizar los niveles de ahorro en relación con los ingresos y la edad.\n",
-    "- Documentar los hallazgos visuales y las conclusiones generales del EDA."
+    "* Segmentación de usuarios en funión de su salud financiera.\n",
+    "* Modelado de elegibilidad para préstamos.\n",
+    "* Predicción del puntaje crediticio de los usuarios.\n",
+    "* Análisis de gastos y recomendaciones de ahorro.\n",
+    "* Aplicación de machine learning en las finanzas de los usuarios."
    ]
   }
  ],
